--- a/package.json
+++ b/package.json
@@ -19,8 +19,7 @@
     "axios": "0.18.0",
     "core-js": "^3",
     "dayjs": "^1.8.18",
-    "lodash": "^4.17.15",
-    "vue": "^2.6.10",
+    "screenfull": "^5.0.2",
     "vue-router": "^3.1.2",
     "vuex": "^3.1.1"
   },
@@ -32,8 +31,6 @@
     "@vue/eslint-config-standard": "^5.0.1",
     "@vue/test-utils": "^1.0.0-beta.20",
     "babel-eslint": "^10.0.1",
-    "babel-plugin-import": "^1.11.0",
-    "babel-plugin-lodash": "^3.3.4",
     "chai": "^4.1.2",
     "eslint": "^6.8.0",
     "eslint-plugin-import": "^2.19.1",
@@ -42,18 +39,14 @@
     "eslint-plugin-standard": "^4.0.1",
     "eslint-plugin-vue": "^6.1.2",
     "faker": "^4.1.0",
-    "less": "^3.9.0",
-    "less-loader": "^5.0.0",
     "lint-staged": "^9.5.0",
-    "lodash-webpack-plugin": "^0.11.5",
     "minimist": "^1.2.0",
     "mockajax": "^1.1.7",
-    "postcss-import": "^12.0.1",
-    "postcss-url": "^8.0.0",
+    "sass": "^1.26.3",
+    "sass-loader": "^8.0.2",
     "sinon": "^8.0.2",
     "sinon-chai": "^3.3.0",
     "vue-template-compiler": "^2.6.10",
-    "webpack": "^4.41.5",
     "webpack-manifest-plugin": "^2.0.4"
   },
   "gitHooks": {
