--- a/package.json
+++ b/package.json
@@ -22,16 +22,19 @@
     "dayjs": "^1.8.18",
     "driver.js": "^0.9.8",
     "dropzone": "^5.7.0",
+    "echarts": "^4.7.0",
     "element-ui": "^2.13.1",
     "fuse.js": "^5.1.0",
     "normalize.css": "^8.0.1",
     "nprogress": "^0.2.0",
     "screenfull": "^5.0.2",
+    "script-loader": "^0.7.2",
     "sortablejs": "^1.10.2",
     "tui-editor": "^1.4.10",
     "vue-count-to": "^1.0.13",
     "vue-router": "^3.1.2",
     "vue-splitpane": "^1.0.6",
+    "vuedraggable": "^2.23.2",
     "vuex": "^3.1.1"
   },
   "devDependencies": {
